[project]
name = "RPI_BME280_sensor"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.1",
    "pimoroni-bme280>=1.0.0",
    "smbus2>=0.6.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    {include-group = "lint"}
]
lint = [
    "mypy==1.18.2",
	"ruff==0.14.3",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]

